--- a/en/index.html
+++ b/en/index.html
@@ -269,7 +269,10 @@
 							<div class="reviews__slide swiper-slide">
 								<div class="reviews__slide-inner">
 									<div class="reviews__slide-img">
-										<picture><img src="img/reviews/3.JPG" alt="Marius Cojocaru"></picture>
+										<picture>
+											<source srcset="img/reviews/3.webp" type="image/webp"><img src="img/reviews/3.jpg"
+												alt="Marius Cojocaru">
+										</picture>
 									</div>
 									<div class="reviews__slide-name">Marius Cojocaru</div>
 									<div class="reviews__slide-review">A pleasant experience, it was very helpful to me. I recommend it
