--- a/ru/index.html
+++ b/ru/index.html
@@ -266,7 +266,10 @@
 							<div class="reviews__slide swiper-slide">
 								<div class="reviews__slide-inner">
 									<div class="reviews__slide-img">
-										<picture><img src="img/reviews/3.JPG" alt="Мариус Коджокару"></picture>
+										<picture>
+											<source srcset="img/reviews/3.webp" type="image/webp"><img src="img/reviews/3.jpg"
+												alt="Marius Cojocaru">
+										</picture>
 									</div>
 									<div class="reviews__slide-name">Мариус Коджокару</div>
 									<div class="reviews__slide-review">Приятный опыт, мне это очень помогло. С удовольствием рекомендую,
