--- a/ro/index.html
+++ b/ro/index.html
@@ -300,7 +300,7 @@
 								<div class="reviews__slide-inner">
 									<div class="reviews__slide-img">
 										<picture>
-											<source srcset="img/reviews/3.webp" type="image/webp"><img src="img/reviews/3.JPG"
+											<source srcset="img/reviews/3.webp" type="image/webp"><img src="img/reviews/3.jpg"
 												alt="Marius Cojocaru">
 										</picture>
 									</div>
